# black-hole-thing

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: bloom_blur.glsl  bloom_composite.glsl  bloom_extract.glsl  bloom_kawase.glsl  fragment.glsl  starfield_cubemap.glsl
src/: Application.cpp  Application.h  BlackHoleRenderer.cpp  BlackHoleRenderer.h  BloomRenderer.cpp  BloomRenderer.h  NoiseTexture.cpp  NoiseTexture.h  ScreenshotExporter.cpp  ScreenshotExporter.h  Shader.cpp  Shader.h  StarfieldCubemap.cpp  StarfieldCubemap.h  main.cpp
